[package]
name = "liquesco-gen-doc-wasm"
version = "0.1.0"
authors = ["cronosun <silvergate@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
liquesco-common = { path = "../common" }
liquesco-processing = { path = "../processing" }
liquesco-schema = { path = "../schema" }
liquesco-gen-doc = { path = "../gen-doc" }
# js-sys = "0.3"
#virtual-dom-rs = "0.6"
# css-rs-macro = "0.1"
#html-macro = "0.1.5"
typed-html-macros = "0.2.1"
typed-html = "0.2.1"

[dependencies.wasm-bindgen]
version = "0.2.47"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.23"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console'
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
