[package]
name = "rust"
version = "0.1.0"
authors = ["cronosun <simon.ruoss@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
enum-repr = "0.2.4"
varuint = "0.6.0"
#decimal = "2.0.4"
uuid = { version = "0.7.4", features = ["v4"] }
smallvec = "0.6.9"
derive-new = "0.5"
serde = {version = "1.0.91", features = ["derive"]}
#serde_derive = "1.0.91"
