[package]
name = "liquesco-schema"
version = "0.0.1"
authors = ["cronosun"]
edition = "2018"

[dependencies]
liquesco-serialization = { path = "../serialization" }
liquesco-common = { path = "../common" }
serde = {version = "1.0.91", features = ["derive"]}
derive_more = "0.13.0"
derive-new = "0.5"
from_variants = "0.4.0"
serde_bytes = "0.11.1"
smallvec = "0.6.9"
