[package]
name = "liquesco-serialization"
version = "0.0.1"
authors = ["cronosun"]
edition = "2018"

[dependencies]
liquesco-common = { path = "../common" }
byteorder = "1.3.1"
enum-repr = "0.2.4"
varuint = "0.6.0"
smallvec = {version = "0.6.9", features = ["serde"] }
derive-new = "0.5"
serde = {version = "1.0.91", features = ["derive"]}
maplit = "1.0.1"
from_variants = "0.4.0"

[dev-dependencies]
serde_bytes = "0.11"



