[package]
name = "liquesco-parsing"
version = "0.0.1"
authors = ["cronosun"]
edition = "2018"

[dependencies]
liquesco-serialization = { path = "../serialization" }
liquesco-common = { path = "../common" }
liquesco-schema = { path = "../schema" }
serde = {version = "1.0.91", features = ["derive"]}
serde_yaml = "0.8.9"
yaml-rust = "0.4"
uuid = { version = "0.7.4", features = ["v4"] }
